--- a/index.html
+++ b/index.html
@@ -130,8 +130,11 @@
     </main>
     <footer>
       <a href="#top" id="back-to-top-button">⬆</a>
-      <p>&copy; 2023 Nike, Inc. | Todos los derechos reservados.</p>
-    </footer>
+      <p>&copy; 2023 Proyecto Pedagógico | Este sitio web es un proyecto pedagógico y no está afiliado a ninguna marca real.</p>
+  </footer>
+    <div class="pedagogical-notice">
+      <p>🎓 ¡Este sitio es un proyecto pedagógico! Aprende y disfruta. 🚀</p>
+  </div>
     <script src="script.js"></script>
   </body>
 </html>
